Added header styles

--- a/src/style/scss/helpers/_variables.scss
+++ b/src/style/scss/helpers/_variables.scss
@@ -1,8 +1,10 @@
 // Fonts
-$main-font: "IBM Plex Sans", sans-serif;
+$main-font: "IBM Plex Sans",
+sans-serif;
 
 // Colours
-$off-white: rgb(215, 218, 220);
+$off-white: #d7dadc;
 $black: #030303;
-$off-black: rgb(26, 26, 27);
+$off-black: #1a1a1b;
+$light-black: #272729;
 $dark-grey: #343536;
