--- a/src/style/scss/components/_header.scss
+++ b/src/style/scss/components/_header.scss
@@ -1,10 +1,12 @@
 header {
   display: grid;
-  grid-template-columns: 97px 1fr;
+  grid-template-columns: 97px 277px;
+  justify-content: space-between;
+  align-items: center;
   height: 48px;
+  padding: 0 1.25rem;
   background-color: $off-black;
   border-bottom: 1px solid $dark-grey;
-  padding: 0 1.25rem;
 }
 
 .logo-wrap {
@@ -20,4 +22,27 @@ header {
   .title {
     width: 57px;
   }
+}
+
+.search-bar {
+  height: 36px;
+
+  input {
+    height: 100%;
+    width: 100%;
+    box-shadow: none;
+    background-color: $light-black;
+    color: $off-white;
+    display: block;
+    height: 36px;
+    width: 100%;
+    border-radius: 4px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: $dark-grey;
+    border-image: initial;
+    outline: none;
+    padding: 0 16px 0 40px;
+  }
+
 }
