--- a/src/style/scss/base/_defaults.scss
+++ b/src/style/scss/base/_defaults.scss
@@ -12,7 +12,7 @@ body {
   font-family: $main-font;
   color: $off-white;
   background-color: $black;
-  font-size: 16px;
+  font-size: $base-font-size;
 }
 
 a {
