Added more styles to post component

--- a/src/style/scss/components/_homepage.scss
+++ b/src/style/scss/components/_homepage.scss
@@ -12,6 +12,7 @@
     background: $off-black;
     border-radius: .3125rem .3125rem .25rem .25rem;
     padding: .75rem;
+    margin-left: 1.5rem;
 
     h3 {
       font-size: $base-font-size;
