--- a/src/style/scss/components/_homepage.scss
+++ b/src/style/scss/components/_homepage.scss
@@ -13,6 +13,9 @@
     border-radius: .3125rem .3125rem .25rem .25rem;
     padding: .75rem;
     margin-left: 1.5rem;
+    height: 500px;
+    position: sticky;
+    top: 1rem;
 
     h3 {
       font-size: $base-font-size;
