--- a/src/style/scss/components/_post.scss
+++ b/src/style/scss/components/_post.scss
@@ -2,6 +2,8 @@
   background: $off-black;
   border: 1px solid $dark-grey;
   margin-bottom: 0.625rem;
+  border-radius: 4px;
+  padding: 0.5rem;
 
   &:first-child {
     display: none;
